changed gender enum, added boilerplate for npm scripts
